control muestra EPS

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -6090,27 +6090,27 @@ $(document).ready(function(){
         },
         {
           Pregunta: "ident_caract_usuario5_1",
-          Respuesta : $("#ident_caract_usuario5_1").val()
+          Respuesta : $("#ident_caract_usuario5_1").is(':checked')
         },
         {
           Pregunta: "ident_caract_usuario5_2",
-          Respuesta : $("#ident_caract_usuario5_2").val()
+          Respuesta : $("#ident_caract_usuario5_2").is(':checked')
         },
         {
           Pregunta: "ident_caract_usuario5_3",
-          Respuesta : $("#ident_caract_usuario5_3").val()
+          Respuesta : $("#ident_caract_usuario5_3").is(':checked')
         },
         {
           Pregunta: "ident_caract_usuario5_4",
-          Respuesta : $("#ident_caract_usuario5_4").val()
+          Respuesta : $("#ident_caract_usuario5_4").is(':checked')
         },   
         {
           Pregunta: "ident_caract_usuario5_5",
-          Respuesta : $("#ident_caract_usuario5_5").val()
+          Respuesta : $("#ident_caract_usuario5_5").is(':checked')
         },     
         {
           Pregunta: "ident_caract_usuario5_6",
-          Respuesta : $("#ident_caract_usuario5_6").val()
+          Respuesta : $("#ident_caract_usuario5_6").is(':checked')
         },     
         {
           Pregunta: "ident_caract_usuario5A",
@@ -6122,55 +6122,55 @@ $(document).ready(function(){
         },   
         {
           Pregunta: "pregunta7b",
-          Respuesta : $("#pregunta7b").val()
+          Respuesta : $("#pregunta7b").filter(':checked')
         },  
         {
           Pregunta: "res_pregunta7c",
-          Respuesta : $("#res_pregunta7c").val()
+          Respuesta : $("#res_pregunta7c").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7d",
-          Respuesta : $("#res_pregunta7d").val()
+          Respuesta : $("#res_pregunta7d").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7e",
-          Respuesta : $("#res_pregunta7e").val()
+          Respuesta : $("#res_pregunta7e").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7f",
-          Respuesta : $("#res_pregunta7f").val()
+          Respuesta : $("#res_pregunta7f").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7g",
-          Respuesta : $("#res_pregunta7g").val()
+          Respuesta : $("#res_pregunta7g").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7h",
-          Respuesta : $("#res_pregunta7h").val()
+          Respuesta : $("#res_pregunta7h").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7i",
-          Respuesta : $("#res_pregunta7i").val()
+          Respuesta : $("#res_pregunta7i").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7j",
-          Respuesta : $("#res_pregunta7j").val()
+          Respuesta : $("#res_pregunta7j").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7k",
-          Respuesta : $("#res_pregunta7k").val()
+          Respuesta : $("#res_pregunta7k").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7l",
-          Respuesta : $("#res_pregunta7l").val()
+          Respuesta : $("#res_pregunta7l").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7m",
-          Respuesta : $("#res_pregunta7m").val()
+          Respuesta : $("#res_pregunta7m").filter(':checked')
         },
         {
           Pregunta: "res_pregunta7n",
-          Respuesta : $("#res_pregunta7n").val()
+          Respuesta : $("#res_pregunta7n").filter(':checked')
         }, 
         {
           Pregunta: "pregunta51",
@@ -6706,39 +6706,39 @@ $(document).ready(function(){
         },
         {
           Pregunta: "Pregunta 14_1_1",
-          Respuesta : $("#res_pregunta14_1_1").val()
+          Respuesta : $("#res_pregunta14_1_1").is(':checked')
         },
         {
           Pregunta: "Pregunta 14_1_2",
-          Respuesta : $("#res_pregunta14_1_2").val()
+          Respuesta : $("#res_pregunta14_1_2").is(':checked')
         },
         {
           Pregunta: "Pregunta 14_1_3",
-          Respuesta : $("#res_pregunta14_1_3").val()
+          Respuesta : $("#res_pregunta14_1_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_4",
-        Respuesta : $("#res_pregunta14_1_4").val()
+        Respuesta : $("#res_pregunta14_1_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_5",
-        Respuesta : $("#res_pregunta14_1_5").val()
+        Respuesta : $("#res_pregunta14_1_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_6",
-        Respuesta : $("#res_pregunta14_1_6").val()
+        Respuesta : $("#res_pregunta14_1_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_7",
-        Respuesta : $("#res_pregunta14_1_7").val()
+        Respuesta : $("#res_pregunta14_1_7").is(':checked')
         },        
         {
         Pregunta: "Pregunta 14_1_8",
-        Respuesta : $("#res_pregunta14_1_8").val()
+        Respuesta : $("#res_pregunta14_1_8").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_9",
-        Respuesta : $("#res_pregunta14_1_9").val()
+        Respuesta : $("#res_pregunta14_1_9").is(':checked')
         },
         {
         Pregunta: "Pregunta 14_1_otra",
@@ -6770,27 +6770,27 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 15_aa_1",
-        Respuesta : $("#res_pregunta15_aa_1").val()
+        Respuesta : $("#res_pregunta15_aa_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 15_aa_2",
-        Respuesta : $("#res_pregunta15_aa_2").val()
+        Respuesta : $("#res_pregunta15_aa_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 15_aa_3",
-        Respuesta : $("#res_pregunta15_aa_3").val()
+        Respuesta : $("#res_pregunta15_aa_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 15_aa_4",
-        Respuesta : $("#res_pregunta15_aa_4").val()
+        Respuesta : $("#res_pregunta15_aa_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 15_aa_5",
-        Respuesta : $("#res_pregunta15_aa_5").val()
+        Respuesta : $("#res_pregunta15_aa_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 15_aa_6",
-        Respuesta : $("#res_pregunta15_aa_6").val()
+        Respuesta : $("#res_pregunta15_aa_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 16",
@@ -6826,35 +6826,35 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 19_1",
-        Respuesta : $("#res_pregunta19_1").val()
+        Respuesta : $("#res_pregunta19_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_2",
-        Respuesta : $("#res_pregunta19_2").val()
+        Respuesta : $("#res_pregunta19_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_3",
-        Respuesta : $("#res_pregunta19_3").val()
+        Respuesta : $("#res_pregunta19_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_4",
-        Respuesta : $("#res_pregunta19_4").val()
+        Respuesta : $("#res_pregunta19_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_5",
-        Respuesta : $("#res_pregunta19_5").val()
+        Respuesta : $("#res_pregunta19_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_6",
-        Respuesta : $("#res_pregunta19_6").val()
+        Respuesta : $("#res_pregunta19_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 19_7",
-        Respuesta : $("#res_pregunta19_7").val()
+        Respuesta : $("#res_pregunta19_7").is(':checked')
         },
         {
         Pregunta: "Pregunta 20a_1",
-        Respuesta : $("#res_pregunta20a_1").val()
+        Respuesta : $("#res_pregunta20a_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 20b_1",
@@ -7450,27 +7450,27 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 22_1",
-        Respuesta : $("#res_pregunta22_1").val()
+        Respuesta : $("#res_pregunta22_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 22_2",
-        Respuesta : $("#res_pregunta22_2").val()
+        Respuesta : $("#res_pregunta22_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 22_3",
-        Respuesta : $("#res_pregunta22_3").val()
+        Respuesta : $("#res_pregunta22_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 22_4",
-        Respuesta : $("#res_pregunta22_4").val()
+        Respuesta : $("#res_pregunta22_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 22_5",
-        Respuesta : $("#res_pregunta22_5").val()
+        Respuesta : $("#res_pregunta22_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 22_otra",
-        Respuesta : $("#res_pregunta22_otra").val()
+        Respuesta : $("#res_pregunta22_otra").is(':checked')
         },
         {
         Pregunta: "Pregunta 23",
@@ -7638,63 +7638,63 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 36_1",
-        Respuesta : $("#res_pregunta36_1").val()
+        Respuesta : $("#res_pregunta36_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_2",
-        Respuesta : $("#res_pregunta36_2").val()
+        Respuesta : $("#res_pregunta36_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_3",
-        Respuesta : $("#res_pregunta36_3").val()
+        Respuesta : $("#res_pregunta36_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_4",
-        Respuesta : $("#res_pregunta36_4").val()
+        Respuesta : $("#res_pregunta36_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_5",
-        Respuesta : $("#res_pregunta36_5").val()
+        Respuesta : $("#res_pregunta36_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_6",
-        Respuesta : $("#res_pregunta36_6").val()
+        Respuesta : $("#res_pregunta36_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_7",
-        Respuesta : $("#res_pregunta36_7").val()
+        Respuesta : $("#res_pregunta36_7").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_8",
-        Respuesta : $("#res_pregunta36_8").val()
+        Respuesta : $("#res_pregunta36_8").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_9",
-        Respuesta : $("#res_pregunta36_9").val()
+        Respuesta : $("#res_pregunta36_9").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_10",
-        Respuesta : $("#res_pregunta36_10").val()
+        Respuesta : $("#res_pregunta36_10").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_11",
-        Respuesta : $("#res_pregunta36_11").val()
+        Respuesta : $("#res_pregunta36_11").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_12",
-        Respuesta : $("#res_pregunta36_12").val()
+        Respuesta : $("#res_pregunta36_12").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_13",
-        Respuesta : $("#res_pregunta36_13").val()
+        Respuesta : $("#res_pregunta36_13").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_14",
-        Respuesta : $("#res_pregunta36_14").val()
+        Respuesta : $("#res_pregunta36_14").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_15",
-        Respuesta : $("#res_pregunta36_15").val()
+        Respuesta : $("#res_pregunta36_15").is(':checked')
         },
         {
         Pregunta: "Pregunta 36_otra",
@@ -7722,31 +7722,31 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 42_1",
-        Respuesta : $("#res_pregunta42_1").val()
+        Respuesta : $("#res_pregunta42_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_2",
-        Respuesta : $("#res_pregunta42_2").val()
+        Respuesta : $("#res_pregunta42_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_3",
-        Respuesta : $("#res_pregunta42_3").val()
+        Respuesta : $("#res_pregunta42_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_4",
-        Respuesta : $("#res_pregunta42_4").val()
+        Respuesta : $("#res_pregunta42_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_5",
-        Respuesta : $("#res_pregunta42_5").val()
+        Respuesta : $("#res_pregunta42_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_6",
-        Respuesta : $("#res_pregunta42_6").val()
+        Respuesta : $("#res_pregunta42_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_7",
-        Respuesta : $("#res_pregunta42_7").val()
+        Respuesta : $("#res_pregunta42_7").is(':checked')
         },
         {
         Pregunta: "Pregunta 42_otra",
@@ -7774,31 +7774,31 @@ $(document).ready(function(){
         },
         {
         Pregunta: "Pregunta 47_1",
-        Respuesta : $("#res_pregunta47_1").val()
+        Respuesta : $("#res_pregunta47_1").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_2",
-        Respuesta : $("#res_pregunta47_2").val()
+        Respuesta : $("#res_pregunta47_2").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_3",
-        Respuesta : $("#res_pregunta47_3").val()
+        Respuesta : $("#res_pregunta47_3").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_4",
-        Respuesta : $("#res_pregunta47_4").val()
+        Respuesta : $("#res_pregunta47_4").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_5",
-        Respuesta : $("#res_pregunta47_5").val()
+        Respuesta : $("#res_pregunta47_5").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_6",
-        Respuesta : $("#res_pregunta47_6").val()
+        Respuesta : $("#res_pregunta47_6").is(':checked')
         },
         {
         Pregunta: "Pregunta 47_otra",
-        Respuesta : $("#res_pregunta47_otra").val()
+        Respuesta : $("#res_pregunta47_otra").is(':checked')
         },
         {
         Pregunta: "Pregunta 48",
