control muestra EPS

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -5986,7 +5986,7 @@ $(document).ready(function(){
         },
         {
           Pregunta: "Municipio",
-          Respuesta : municipio
+          Respuesta : $("#MunicipioEncuesta").val()
         },
         {
           Pregunta: "Manzana",
@@ -6118,59 +6118,59 @@ $(document).ready(function(){
         },   
         {
           Pregunta: "res_pregunta7a",
-          Respuesta : $("#res_pregunta7a").val()
+          Respuesta : $("#res_pregunta7a").attr('val()')
         },   
         {
           Pregunta: "pregunta7b",
-          Respuesta : $("#pregunta7b").filter(':checked')
+          Respuesta : $("#pregunta7b").attr('value')
         },  
         {
           Pregunta: "res_pregunta7c",
-          Respuesta : $("#res_pregunta7c").filter(':checked')
+          Respuesta : $("#res_pregunta7c").attr('value')
         },
         {
           Pregunta: "res_pregunta7d",
-          Respuesta : $("#res_pregunta7d").filter(':checked')
+          Respuesta : $("#res_pregunta7d").attr('value')
         },
         {
           Pregunta: "res_pregunta7e",
-          Respuesta : $("#res_pregunta7e").filter(':checked')
+          Respuesta : $("#res_pregunta7e").attr('value')
         },
         {
           Pregunta: "res_pregunta7f",
-          Respuesta : $("#res_pregunta7f").filter(':checked')
+          Respuesta : $("#res_pregunta7f").attr('value')
         },
         {
           Pregunta: "res_pregunta7g",
-          Respuesta : $("#res_pregunta7g").filter(':checked')
+          Respuesta : $("#res_pregunta7g").attr('value')
         },
         {
           Pregunta: "res_pregunta7h",
-          Respuesta : $("#res_pregunta7h").filter(':checked')
+          Respuesta : $("#res_pregunta7h").attr('value')
         },
         {
           Pregunta: "res_pregunta7i",
-          Respuesta : $("#res_pregunta7i").filter(':checked')
+          Respuesta : $("#res_pregunta7i").attr('value')
         },
         {
           Pregunta: "res_pregunta7j",
-          Respuesta : $("#res_pregunta7j").filter(':checked')
+          Respuesta : $("#res_pregunta7j").attr('value')
         },
         {
           Pregunta: "res_pregunta7k",
-          Respuesta : $("#res_pregunta7k").filter(':checked')
+          Respuesta : $("#res_pregunta7k").attr('value')
         },
         {
           Pregunta: "res_pregunta7l",
-          Respuesta : $("#res_pregunta7l").filter(':checked')
+          Respuesta : $("#res_pregunta7l").attr('value')
         },
         {
           Pregunta: "res_pregunta7m",
-          Respuesta : $("#res_pregunta7m").filter(':checked')
+          Respuesta : $("#res_pregunta7m").attr('value')
         },
         {
           Pregunta: "res_pregunta7n",
-          Respuesta : $("#res_pregunta7n").filter(':checked')
+          Respuesta : $("#res_pregunta7n").attr('value')
         }, 
         {
           Pregunta: "pregunta51",
