control muestra EPS

--- a/app/views/muestra/index.html.erb
+++ b/app/views/muestra/index.html.erb
@@ -1021,7 +1021,7 @@
           <td>428</td>
           <td><%= (100* total/428.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL BARRIOS UNIDOS DE QUIBDÓ E.S.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "ASOCIACIÓN MUTUAL BARRIOS UNIDOS DE QUIBDÓ E.S.S.").count(:id) %>
         <tr>
           <td scope="row"> ASOCIACIÓN MUTUAL BARRIOS UNIDOS DE QUIBDÓ E.S.S. </td>
           <td><%= total %></td>
@@ -1035,14 +1035,14 @@
           <td>566</td>
           <td><%= (100* total/566.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "ASOCIACIÓN MUTUAL LA ESPERANZA ASMET SALUD").count(:id) %>
         <tr>
           <td>ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD </td>
           <td><%= total %></td>
           <td>769</td>
           <td><%= (100* total/769.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS").count(:id) %>
         <tr>
           <td>ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS</td>
           <td><%= total %></td>
@@ -1112,21 +1112,21 @@
           <td>429</td>
           <td><%= (100* total/429.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "CAJA DE DE COMPENSACION FAMILIAR  CAJACOPI ATLANTICO").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "CAJA DE DE COMPENSACION FAMILIAR CAJACOPI ATLANTICO").count(:id) %>
         <tr>
           <td>CAJA DE DE COMPENSACION FAMILIAR  CAJACOPI ATLANTICO</td>
           <td><%= total %></td>
           <td>433</td>
           <td><%= (100* total/433.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "CAPITAL SALUD").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "CAPITAL SALUD").count(:id) %>
         <tr>
           <td>CAPITAL SALUD</td>
           <td><%= total %></td>
           <td>430</td>
           <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "CAPRESOCA  EPS").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "CAPRESOCA EPS").count(:id) %>
         <tr>  
           <td>CAPRESOCA  EPS</td>
           <td><%= total %></td>
@@ -1140,28 +1140,28 @@
           <td>427</td>
           <td><%= (100* total/427.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "COMPENSAR   E.P.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COMPENSAR E.P.S.").count(:id) %>
         <tr>
           <td>COMPENSAR   E.P.S.</td>
           <td><%= total %></td>
           <td>430</td>
           <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "COOMEVA   E.P.S.  S.A.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COOMEVA E.P.S. S.A.").count(:id) %>
         <tr>
           <td>COOMEVA   E.P.S.  S.A.</td>
           <td><%= total %></td>
           <td>487</td>
           <td><%= (100* total/487.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "COOPERATIVA DE SALUD COMUNITARIA-COMPARTA").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COOPERATIVA DE SALUD COMUNITARIA-COMPARTA").count(:id) %>
         <tr>
           <td>COOPERATIVA DE SALUD COMUNITARIA-COMPARTA</td>
           <td><%= total %></td>
           <td>605</td>
           <td><%= (100* total/605.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COOSALUD EPS").count(:id) %>
         <tr>
           <td>COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.</td>
           <td><%= total %></td>
@@ -1175,14 +1175,14 @@
           <td>430</td>
           <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "E.P.S.  FAMISANAR  LTDA.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "E.P.S. FAMISANAR LTDA.").count(:id) %>
         <tr>
           <td>E.P.S.  FAMISANAR  LTDA.</td>
           <td><%= total %></td>
           <td>435</td>
           <td><%= (100* total/435.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "E.P.S.  SANITAS  S.A.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "E.P.S. SANITAS S.A.").count(:id) %>
         <tr>
           <td>E.P.S.  SANITAS  S.A.</td>
           <td><%= total %></td>
@@ -1210,14 +1210,14 @@
           <td>428</td>
           <td><%= (100* total/428.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "EPS SERVICIO OCCIDENTAL DE SALUD S.A. - EPS S.O.S. S.A.").count(:id) %>
         <tr>
           <td>EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.</td>
           <td><%= total %></td>
           <td>453</td>
           <td><%= (100* total/453.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "EPS Y MEDICINA PREPAGADA SURAMERICANA S.A").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "EPS Y MEDICINA PREPAGADA SURAMERICANA S.A").count(:id) %>
         <tr>
           <td>EPS Y MEDICINA PREPAGADA SURAMERICANA S.A</td>
           <td><%= total %></td>
@@ -1231,14 +1231,14 @@
           <td>914</td>
           <td><%= (100* total/914.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "MEDIMAS").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "MEDIMAS").count(:id) %>
         <tr>
           <td>MEDIMAS</td>
           <td><%= total %></td>
           <td>1200</td>
           <td><%= (100* total/1200.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "NUEVA EPS S.A.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "NUEVA EPS S.A.").count(:id) %>
         <tr>
           <td>NUEVA EPS S.A.</td>
           <td><%= total %></td>
@@ -1252,14 +1252,14 @@
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "SALUD  TOTAL  S.A.  E.P.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "SALUD TOTAL S.A. E.P.S.").count(:id) %>
         <tr>
           <td>SALUD  TOTAL  S.A.  E.P.S.</td>
           <td><%= total %></td>
           <td>469</td>
           <td><%= (100* total/469.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "SALUDVIDA S.A .E.P.S").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "SALUDVIDA S.A .E.P.S").count(:id) %>
         <tr>
           <td>SALUDVIDA S.A .E.P.S</td>
           <td><%= total %></td>
