--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -89,6 +89,41 @@
     <br>
   </div>
 
+<div id="Pregunta6">
+    <label> <strong> 6. Zona  </strong> </label>
+    <%= bar_chart Encuestum.group(:zona).having("zona != ?", "--").having("zona != ?", "").count(:id), download: true%>
+    <br>
+    <table class="table">
+      <thead>
+        <tr>  
+          <th scope="col">Item</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">%</th>
+        </tr>
+      </thead>
+      <tbody>  
+        <% total  = 0 %>
+        <% Encuestum.group(:zona).having("zona != ?", "--").having("zona != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
+          <% total = total + item %>
+        <%end%>
+        <% Encuestum.group(:zona).having("zona != ?", "--").having("zona != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
+        <tr>
+          <td scope="row"><%= value %></td>
+          <td><%= item %></td>
+          <td><%= (100*item/total.to_f).round(2) %></td>
+        </tr>
+        <%end%>
+        <thead>
+        <tr>
+          <th scope="col"> <strong> Total </strong></td>
+          <th scope="col"> <strong> <%= total %> </strong></td>
+          <th scope="col"> <strong> 100% </strong></td>
+        </tr>
+        </thead>
+      </tbody>  
+    </table>
+    <br>    
+  </div>
    
   <div id="Sexo">
     <label> <strong> L3. Sexo </strong> </label>
@@ -199,42 +234,6 @@
     <br>
   </div>
  
-  
-  <div id="Pregunta6">
-  	<label> <strong> 6. En general, ¿Cómo califica su estado de salud?  </strong> </label>
-  	<%= bar_chart Encuestum.group(:pregunta6).having("pregunta6 != ?", "--").having("pregunta6 != ?", "").count(:id), download: true%>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta6).having("pregunta6 != ?", "--").having("pregunta6 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta6).having("pregunta6 != ?", "--").having("pregunta6 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>    
-  </div>
 
 <h3>10. En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS?</h3>
  <div id="Pregunta10A">
@@ -4445,284 +4444,6 @@
     </table>
     <br>
   </div>
-  <div id="Pregunta51">
-    <label> <strong> 51. De acuerdo con su cultura, pueblo o rasgos físicos, es o se reconoce como </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta51).having("pregunta51 != ?", "--").having("pregunta51 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta51).having("pregunta51 != ?", "--").having("pregunta51 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta51).having("pregunta51 != ?", "--").having("pregunta51 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody> 
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta52">
-    <label> <strong> 52. Su estado civil actualmente es… </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta52).having("pregunta52 != ?", "--").having("pregunta52 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta52).having("pregunta52 != ?", "--").having("pregunta52 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta52).having("pregunta52 != ?", "--").having("pregunta52 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>   
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta53">
-    <label> <strong> 53. ¿Cuál es el nivel educativo más alto que usted ha alcanzado? </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta53).having("pregunta53 != ?", "--").having("pregunta53 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta53).having("pregunta53 != ?", "--").having("pregunta53 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta53).having("pregunta53 != ?", "--").having("pregunta53 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta54">
-    <label> <strong> 54. Estrato de la residencia:  </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta54).having("pregunta54 != ?", "--").having("pregunta54 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta54).having("pregunta54 != ?", "--").having("pregunta54 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta54).having("pregunta54 != ?", "--").having("pregunta54 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody> 
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta55">
-    <label> <strong> 55. ¿A qué actividad se dedica la mayor parte del tiempo?  </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta55).having("pregunta55 != ?", "--").having("pregunta55 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta55).having("pregunta55 != ?", "--").having("pregunta55 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta55).having("pregunta55 != ?", "--").having("pregunta55 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta56">
-    <label> <strong> 56. La encuesta fue respondida por un persona diferente al usuario? </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta56).having("pregunta56 != ?", "--").having("pregunta56 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta56).having("pregunta56 != ?", "--").having("pregunta56 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta56).having("pregunta56 != ?", "--").having("pregunta56 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>
-  </div>
-  <div id="Pregunta58">
-    <label> <strong> 58. Género del informante idóneo </strong> </label>
-    <%= pie_chart Encuestum.group(:pregunta58).having("pregunta58 != ?", "--").having("pregunta58 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta58).having("pregunta58 != ?", "--").having("pregunta58 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta58).having("pregunta58 != ?", "--").having("pregunta58 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>  
-    </table>
-    <br>
-  </div>  
-  <div id="Pregunta60">
-    <label> <strong> 60. Parentesco del informante idóneo </strong> </label>
-    <%= bar_chart Encuestum.group(:pregunta60).having("pregunta60 != ?", "--").having("pregunta60 != ?", "").count(:id) %>
-    <br>
-    <table class="table">
-      <thead>
-        <tr>  
-          <th scope="col">Item</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">%</th>
-        </tr>
-      </thead>
-      <tbody>  
-        <% total  = 0 %>
-        <% Encuestum.group(:pregunta60).having("pregunta60 != ?", "--").having("pregunta60 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-          <% total = total + item %>
-        <%end%>
-        <% Encuestum.group(:pregunta60).having("pregunta60 != ?", "--").having("pregunta60 != ?", "").order('COUNT(id) DESC').count(:id).each do |value,item|%>
-        <tr>
-          <td scope="row"><%= value %></td>
-          <td><%= item %></td>
-          <td><%= (100*item/total.to_f).round(2) %></td>
-        </tr>
-        <%end%>
-        <thead>
-        <tr>
-          <th scope="col"> <strong> Total </strong></td>
-          <th scope="col"> <strong> <%= total %> </strong></td>
-          <th scope="col"> <strong> 100% </strong></td>
-        </tr>
-        </thead>
-      </tbody>   
-    </table>
-    <br>
-  </div>  
+
+
   
