--- a/app/views/muestra/index.html.erb
+++ b/app/views/muestra/index.html.erb
@@ -65,7 +65,7 @@
           <td>552</td>
           <td><%= (100* total/552.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(departamento: "Bogotá, D.C.").count(:id) %>
+        <% total = Encuestum.where(departamento: "Bogotá").count(:id) %>
         <tr>
           <td scope="row"> Bogotá, D.C. </td>
           <td><%= total %></td>
@@ -347,7 +347,7 @@
           <td>400</td>
           <td><%= (100* total/400.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "Bogotá, D.C.").count(:id) %>
+        <% total = Encuestum.where(municipio: "Bogotá").count(:id) %>
         <tr>
           <td scope="row"> Bogotá, D.C. </td>
           <td><%= total %></td>
@@ -1035,7 +1035,7 @@
           <td>566</td>
           <td><%= (100* total/566.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "ASOCIACIÓN MUTUAL LA ESPERANZA ASMET SALUD").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD").count(:id) %>
         <tr>
           <td>ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD </td>
           <td><%= total %></td>
@@ -1140,7 +1140,7 @@
           <td>427</td>
           <td><%= (100* total/427.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "COMPENSAR E.P.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COMPENSAR   E.P.S.").count(:id) %>
         <tr>
           <td>COMPENSAR   E.P.S.</td>
           <td><%= total %></td>
@@ -1161,7 +1161,7 @@
           <td>605</td>
           <td><%= (100* total/605.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "COOSALUD EPS").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.").count(:id) %>
         <tr>
           <td>COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.</td>
           <td><%= total %></td>
@@ -1175,7 +1175,7 @@
           <td>430</td>
           <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "E.P.S. FAMISANAR LTDA.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "E.P.S.  FAMISANAR  LTDA.").count(:id) %>
         <tr>
           <td>E.P.S.  FAMISANAR  LTDA.</td>
           <td><%= total %></td>
@@ -1210,7 +1210,7 @@
           <td>428</td>
           <td><%= (100* total/428.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "EPS SERVICIO OCCIDENTAL DE SALUD S.A. - EPS S.O.S. S.A.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.").count(:id) %>
         <tr>
           <td>EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.</td>
           <td><%= total %></td>
@@ -1252,7 +1252,7 @@
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(pregunta1: "SALUD TOTAL S.A. E.P.S.").count(:id) %>
+        <% total = Encuestum.where(pregunta1: "SALUD  TOTAL  S.A.  E.P.S.").count(:id) %>
         <tr>
           <td>SALUD  TOTAL  S.A.  E.P.S.</td>
           <td><%= total %></td>
