--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3757,7 +3757,7 @@
   <br>
     <div>
         <%= f.label :nombre_encuestador, 'Nombre del encuestador' , id:"operativo"%>
-        <%= f.select :nombre_encuestador, ["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario_encuestador"}%>
+        <%= f.select :nombre_encuestador, ["1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","67","68","69","70","71","72","73","74","75","76","77","78","79","80","81","82","83","84","85","86","87","88","89","90"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario_encuestador"}%>
     </div>
     <div>
         <%= f.label :nombre_supervisor, 'Nombre del supervisor' , id:"operativo"%>
